--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/graphql-fields": "^1.3.4",
     "@types/micro-cors": "^0.1.2",
     "@types/react": "17.0.26",
+    "@types/react-dom": "^17.0.9",
     "@types/safe-json-stringify": "^1.1.2",
     "apollo-boost": "^0.4.9",
     "apollo-server-micro": "^3.3.0",
@@ -33,9 +34,21 @@
     "reflect-metadata": "^0.1.13",
     "safe-json-stringify": "^1.2.0",
     "type-graphql": "^1.1.1",
-    "typegraphql-prisma": "^0.16.1"
+    "typegraphql-prisma": "^0.16.1",
+    "autoprefixer": "^10.3.6",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.2",
+    "postcss": "^8.3.8",
+    "prisma": "^3.1.1",
+    "tailwindcss": "^2.2.16",
+    "typescript": "4.4.3"
   },
   "devDependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2",
+    "@types/react-dom": "^17.0.9",
+    "notistack": "^2.0.2",
     "@apollo/client": "^3.3.19",
     "@apollo/react-hooks": "^4.0.0",
     "@prisma/client": "^3.1.1",
