--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
+    "@next/eslint-plugin-next": "^11.1.2",
     "@prisma/client": "^3.1.1",
     "@types/graphql-fields": "^1.3.4",
     "@types/micro-cors": "^0.1.2",
@@ -22,51 +23,51 @@
     "@types/safe-json-stringify": "^1.1.2",
     "apollo-boost": "^0.4.9",
     "apollo-server-micro": "^3.3.0",
+    "autoprefixer": "^10.3.6",
+    "eslint": "7.32.0",
+    "eslint-config-next": "11.1.0",
     "graphql": "^15.6.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.10.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "11.1.2",
+    "next": "11.1.0",
     "notistack": "^2.0.2",
+    "postcss": "^8.3.8",
+    "prisma": "^3.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reflect-metadata": "^0.1.13",
     "safe-json-stringify": "^1.2.0",
+    "tailwindcss": "^2.2.16",
     "type-graphql": "^1.1.1",
     "typegraphql-prisma": "^0.16.1",
-    "autoprefixer": "^10.3.6",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "postcss": "^8.3.8",
-    "prisma": "^3.1.1",
-    "tailwindcss": "^2.2.16",
     "typescript": "4.4.3"
   },
   "devDependencies": {
+    "@apollo/client": "^3.3.19",
+    "@apollo/react-hooks": "^4.0.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.2",
-    "@types/react-dom": "^17.0.9",
-    "notistack": "^2.0.2",
-    "@apollo/client": "^3.3.19",
-    "@apollo/react-hooks": "^4.0.0",
     "@prisma/client": "^3.1.1",
     "@types/graphql-fields": "^1.3.4",
     "@types/micro-cors": "^0.1.2",
     "@types/react": "17.0.26",
+    "@types/react-dom": "^17.0.9",
     "@types/safe-json-stringify": "^1.1.2",
     "apollo-boost": "^0.4.9",
     "apollo-server-micro": "^3.3.0",
     "autoprefixer": "^10.3.6",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint-config-next": "11.1.0",
     "graphql": "^15.6.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.10.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "11.1.2",
+    "next": "11.1.0",
+    "notistack": "^2.0.2",
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
     "react": "17.0.2",
