--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "tailwindcss": "^2.2.16",
     "type-graphql": "^1.1.1",
     "typegraphql-prisma": "^0.16.1",
-    "typescript": "4.4.3"
+    "typescript": "4.4.3",
+    "@apollo/client": "^3.3.19",
+    "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.2"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.19",
